--- a/docs/docs.tex
+++ b/docs/docs.tex
@@ -80,7 +80,7 @@
     \begin{equation}
         \begin{aligned}
             g(C,T) &= 30 ( C +0.9) \exp \left( \bar{T} - 0.95 \frac{C + 0.49}{C +0.42} \right)^2 + \frac{C + 0.06}{C + 0.09} \\
-            \sigma_f &= 0.28 * g(C,t) \exp \left( \frac{5}{\bar{T}} - \frac{0.01}{C + 0.05} \right) \\
+            \sigma_f &= 0.28 * g(C,t) \exp \left( \frac{C + 0.32}{0.19 (C + 0.41)} - \frac{0.01}{C + 0.05} \right) \\
             m &= (-0.081 C - 0.154) \bar{T} + (-0.019 C + 0.207) + \frac{0.027}{C+0.320}
         \end{aligned}
         \label{eq:below-phase-transformation}
